    ShaderUtil 中 NormalMapGenParam 增加 applyHorizontalRamp / applyVerticalRamp / genMipmap 属性，并微调其余预设值
    CombatEntityIlluminantData 中 PROJ_normalColor 更名为 PROJ_bodyColor，PROJ_normalRadius 更名为 PROJ_bodyRadius

    部分位于 org.boxutil.units.builtin 中的类移动
    TemporaryCleanupPlugin / TextSubmitFeedbackAPI 移动至 org.boxutil.base.api.resource
    LayeredRenderingPlugin 移动至 org.boxutil.base.api.everyframe

    用于光影包渲染的部分资源类，现在拥有了专有的 hashCode 与 equals 计算方法
    改进 SimpleParticleControlData 的默认计时策略，减少空闲时的计算调用
    现 ControlDataAPI 中部分方法将会在另一个线程上被运行
    渲染类的部分方法增加锁以支持多线程

    增加工具类 MeshUtil
    CommonUtil 中方法移动至 MeshUtil ：
        Vector3f[] tangentMaker(Vector3f, Vector3f, Vector3f, Vector2f, Vector2f, Vector2f);
        Vector3f tangentOnlyMaker(Vector3f, Vector3f, Vector3f, Vector2f, Vector2f, Vector2f);
        Vector3f surfaceNormal(Vector3f, Vector3f, Vector3f);

    RenderingUtil 工具类中增加 SpecialFX 子分类，便于快速生成有别于原版的额外视觉效果
    RenderingUtil 工具类中增加 VanillaFX 子分类，用于使用 BoxUtil 的引擎渲染贴近原版的对应视觉效果
    RenderingUtil.VanillaFX 包含的 CombatEngineAPI 类似实现方法：
        addHitParticle();
        addSmoothParticle();
        addNegativeParticle();
        addSmokeParticle();
        addNebulaParticle();
        addNegativeNebulaParticle();
        addSwirlyNebulaParticle();
        addNegativeSwirlyNebulaParticle();
        addNebulaSmokeParticle();
        addNebulaSmoothParticle();
        spawnExplosion();
        spawnDebrisSmall();
        spawnDebrisMedium();
        spawnDebrisLarge();

    CombatRenderingManager 新增方法：
        byte addEntity(RenderDataAPI);
        boolean containsEntity(CombatEngineLayers, RenderDataAPI);
        boolean addBackgroundRenderingPlugin(BackgroundEveryFramePlugin);
        boolean containsBackgroundRenderingPlugin(BackgroundEveryFramePlugin);
        boolean addBackgroundLogicalPlugin(BackgroundEveryFramePlugin);
        boolean containsBackgroundLogicalPlugin(BackgroundEveryFramePlugin);
        ConcurrentMap<String, Object> getCustomData();
